# SDIZO_2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
Algorithms/: PrimAlgorithm.cpp  PrimAlgorithm.h
Algorithms/BellmanFord/: BellmanFord.cpp  BellmanFord.h
Algorithms/Dijsktra/: Dijkstra.cpp  Dijkstra.h  DijkstraAlgorithm.cpp  DijkstraAlgorithm.h
Algorithms/Kruskal/: Kruskal.cpp  Kruskal.h
Algorithms/Prim/: Prim.cpp  Prim.h  PrimAlgorithm.cpp  PrimAlgorithm.h
Structures/: Graph.h  Heap.cpp  Heap.h  Path.cpp
Structures/EdgeHeap/: Heap.cpp  Heap.h
Structures/IncidenceMatrix/: IncidenceMatrix.cpp  IncidenceMatrix.h
Structures/NeighboursList/: NeighboursList.cpp  NeighboursList.h
Structures/Path/: Path.cpp
Utility/FileManager/: FileManager.cpp  FileManager.h
Utility/GraphGenerator/: GraphGenerator.cpp  GraphGenerator.h
Utility/Menu/: Menu.cpp  Menu.h
Utility/Tests/: Tests.cpp  Tests.h
Utility/Timer/: Timer.cpp  Timer.h
